test/library/standard/List/bradc/emptySeq3.good
emptySeq3.chpl:3: error: type mismatch in assignment from nil to list(int(64))
