test/library/standard/List/bradc/emptySeq3.chpl
use LinkedLists;

var s: LinkedList(int) = nil;

writeln("s is: ", s);
